Minor clean-up of KafkaBrokerConfigurationBuilder class
Signed-off-by: Jakub Scholz <www@scholzj.com>